--- a/public/stylesheets/breakpoints/base.styl
+++ b/public/stylesheets/breakpoints/base.styl
@@ -103,6 +103,9 @@ body
       font-size 10px
       letter-spacing 2px
       margin-top -1px
+
+  &.updatebrowser-header
+    overflow hidden
     
   /*
    * Navigation
@@ -503,6 +506,36 @@ body
     text-decoration none
     font-weight 500
 
+/*
+ * Update Browser
+ */
+.updatebrowser
+  max-width 350px
+  margin 100px auto 0
+  background dark-grey
+  padding 10px
+  color white
+  
+  .update-title
+    color purple
+    font-weight bold
+    font-size 26px
+    margin-bottom 20px
+    
+  .update-browsers
+    text-align center
+    margin 20px 0 10px
+    
+  .update-browser-type
+    width 20%
+    display inline-block 
+    
+  .update-browser-link
+    color white
+    font-size 36px
+    
+    &:hover
+      color green
 
 
 
