Fixed second row header for bigger screens

--- a/public/stylesheets/breakpoints/1030up.styl
+++ b/public/stylesheets/breakpoints/1030up.styl
@@ -16,6 +16,7 @@
     font-size 92px
   .content-title-second
     text-indent 50%
+    width 100%
     .content-title-and
       font-size 58px
     .content-title-second-text
